# PYTHON-LHC

./: __init__.py  operations.py  trigonometric_signals.py  unitary_signals.py
_ICT_Diva Parekh_161/: LICENCE  README.md  main.py  setup.cfg
_ICT_Diva Parekh_161/_ICT_DivaParekh_161/: __init__.py  operations.py  trigonometric_signals.py  unitary_signals.py
_ICT_Diva Parekh_161/signal_ICT_DivaParekh_161.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
