[metadata]
name = signal_ICT_DivaParekh_161
version = 3.13.7
author = Diva Parekh
author_email = parekh.diva06@gmail.com
description = A Python package for generating and operating on basic signals for the Programming with Python course (01CT1309).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/divaparekh06/signal_ICT_YourName_YourEnrollmentNo
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    numpy
    matplotlib
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    docs*
